// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Badge /> renders correctly with default variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors border-blue-500 bg-blue-500 text-white "
>
  Default
</div>
`;

exports[`<Badge /> renders correctly with secondary variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors border-gray-200 bg-gray-100 text-gray-800 "
>
  Secondary
</div>
`;
